--- a/programs.html
+++ b/programs.html
@@ -1264,7 +1264,7 @@
                         <p>There are no medical exclusions.</p>
 
                         <h4>Explanatory Video</h4>
-                        <p>Watch this quick video to learn how this program works and the benefits it provides.</p>
+                        <p>Watch this quick video to learn how the program works and the benefits it provides.</p>
                         <div class="gap-video-preview"
                             onclick="openGapVideoModal()"
                             role="button"
